<?xml version="1.0" encoding="utf-8"?>
<resources>

    
 <string name="border_top">Border Top</string>
    <string name="border_bottom">Border Bottom</string>
    <string name="image_url">Image Url</string>
   <string-array name="device_entries">
       <item>吃饭</item>
       <item>睡觉</item>
       <item>打豆豆</item>
   </string-array>    
   
   <string-array name="sex">
       <item>男</item>
       <item>女</item>
   </string-array>
    
    <string name="button03">button01</string>
    
    <string name="app_name">Android</string>
    <string name="hello_world">My Hello world!</string>
    
    
    <!-- Layout Start -->
    <string name="absolutelayout">absolutelayout</string>
    
    <string name="logintv">用户名</string>
    <string name="loginhint">请输入用户名</string>
    <string name="passwdtv">密码</string>
    <string name="passwdhint">请输入密码</string>
    <string name="loginbtn">登录</string>
    
    <!-- Layout End -->
    
    
    
    
    
    <string name="menu_settings">Settings</string>
    <string name="startservice">开始服务</string>
    <string name="stopservice">停止服务</string>
    
    <string name="statusbar">状态栏按钮</string>
    
    <string name="http">HTTP访问</string>
    
    <string name="planet_prompt">Choose a planet</string>
    <string-array name="planets_array">
        <item>Mercury</item>
        <item>Venus</item>
        <item>Earth</item>
        <item>Mars</item>
        <item>Jupiter</item>
        <item>Saturn</item>
        <item>Uranus</item>
        <item>Neptune</item>
    </string-array>
    
    
  <string name="defaultId">未知编号请求！</string> 
  <string name="btnPlace">地点查找</string> 
  <string name="btnDrive">驾车导航</string> 
  <string name="btnBus">公交导航</string> 
  <string name="strPlace">地点：</string> 
  <string name="btnFind">查找</string> 
  <string name="strFrom">起点：</string> 
  <string name="strTo">终点：</string> 
  
   <string name="row1_column1">第一行第一列</string>
   <string name="row1_column2">第一行第二列</string>
   <string name="row1_column3">第一行第三列</string>
   <string name="row2_column1">第二行第一列</string>
   <string name="row2_column2">第二行第二列</string>
  
   
   
    <string name="xlistview_header_hint_normal">下拉刷新</string>
    <string name="xlistview_header_hint_ready">松开刷新数据</string>
    <string name="xlistview_header_hint_loading">正在加载...</string>
    <string name="xlistview_header_last_time">上次更新时间：</string>
    <string name="xlistview_footer_hint_normal">查看更多</string>
    <string name="xlistview_footer_hint_ready">松开载入更多</string>

    
        <string name="left">Left</string>
    <string name="right">Right</string>
    <string name="left_and_right">Left and Right</string>
    
    
       <string-array name="birds">
        <item>Eagle</item>
        <item>Flamingo</item>
        <item>Heron</item>
        <item>Ostrich</item>
        <item>Peacock</item>
        <item>Penguin</item>
        <item>Toucan</item>
        <item>Turkey</item>
        <item>Vulture</item>
    </string-array>
    
  <!--   <string-array name="birds_img">
        <item>@drawable/slidingmenu_eagle</item>
        <item>@drawable/slidingmenu_flamingo</item>
        <item>@drawable/slidingmenu_heron</item>
        <item>@drawable/slidingmenu_ostrich</item>
        <item>@drawable/slidingmenu_peacock</item>
        <item>@drawable/slidingmenu_penguin</item>
        <item>@drawable/slidingmenu_toucan</item>
        <item>@drawable/slidingmenu_turkey</item>
        <item>@drawable/slidingmenu_vulture</item>
    </string-array> -->
    

</resources>