<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    >
	<LinearLayout
		android:orientation="horizontal"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		>
		<Button
			android:id="@+id/btnPlace"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:background="@drawable/btn_select"
			android:text="@string/btnPlace"
			/>
		<Button
			android:id="@+id/btnDrive"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:background="@drawable/btn_select"
			android:text="@string/btnDrive"
			/>
		<Button
			android:id="@+id/btnBus"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:background="@drawable/btn_select"
			android:text="@string/btnBus"
			/>
	</LinearLayout>
	<LinearLayout
		android:orientation="vertical"
		android:layout_width="fill_parent"
		android:layout_height="fill_parent"
		>
		<WebView
			android:id="@+id/webview"
			android:layout_width="fill_parent"
			android:layout_height="fill_parent"
			/>
		
	</LinearLayout>
</LinearLayout>
