<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:id="@+id/two_layout_root"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent"
  	>
  	<TextView
  		android:id="@+id/txtFrom"
  		android:layout_width="wrap_content"
  		android:layout_height="wrap_content"
  		android:layout_alignBaseline="@+id/editPlace"
  		android:layout_marginLeft="4dp"
  		android:paddingTop="5dp"
  		android:paddingLeft="5dp"
  		android:textSize="20dp" 
  		android:textColor="#FFFFFFFF"
  		android:text="@string/strFrom"
  		/>
	<EditText 
		android:id="@+id/editFrom"
		android:layout_width="150dp"
		android:layout_height="wrap_content"
		android:layout_toRightOf="@id/txtFrom"
		android:background="@drawable/edit" 
		android:saveEnabled="true" 
		/>
	<TextView
  		android:id="@+id/txtTo"
  		android:layout_width="wrap_content"
  		android:layout_height="wrap_content"
  		android:layout_alignBaseline="@+id/editTo"
  		android:layout_below="@id/txtFrom"
  		android:layout_marginLeft="4dp"
  		android:paddingTop="5dp"
  		android:paddingLeft="5dp"
  		android:textSize="20dp" 
  		android:textColor="#FFFFFFFF"
  		android:text="@string/strTo"
  		/>
	<EditText 
		android:id="@+id/editTo"
		android:layout_width="150dp"
		android:layout_height="wrap_content"
		android:layout_toRightOf="@id/txtTo"
		android:layout_below="@id/editFrom"
		android:layout_alignLeft="@id/editFrom"
		android:background="@drawable/edit" 
		android:saveEnabled="true" 
		/>
	<Button
		android:id="@+id/btnRouteFind"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_toRightOf="@id/editTo"
		android:layout_alignBaseline="@id/editTo"
		android:layout_marginLeft="4dp"
		android:layout_marginRight="4dp"
		android:background="@drawable/btn_select"
		android:textSize="18dp" 
		android:text="@string/btnFind"
		/>
</RelativeLayout>
